--- a/QueueCheckWeb/package.json
+++ b/QueueCheckWeb/package.json
@@ -13,6 +13,7 @@
     "aws-sdk": "^2.897.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "jade": "^1.11.0",
     "md5": "^2.3.0"
   },
   "devDependencies": {
