--- a/QueueCheckWeb/package.json
+++ b/QueueCheckWeb/package.json
@@ -14,7 +14,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jade": "^1.11.0",
-    "md5": "^2.3.0"
+    "md5": "^2.3.0",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
