--- a/QueueCheckWeb/package.json
+++ b/QueueCheckWeb/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "jade": "^1.11.0",
     "md5": "^2.3.0",
+    "microtime": "^3.0.0",
     "pug": "^3.0.2"
   },
   "devDependencies": {
